--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-project",
+  "packageManager": "yarn@3.5.0",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +12,13 @@
   "dependencies": {
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "throttle-debounce": "5.0.0",
+    "use-latest": "^1.2.1"
   }
 }
